# Bilgisayar_Grafikleri_Proje

./: .gitignore  CMakeLists.txt  Shader.cpp  glad.c  main.cpp  shader.frag  shader.vert  skybox.frag  skybox.vert
include/: Camera.h  Geometry.h  Shader.h
include/glad/: glad.h
